// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test suit for design should render Column correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="emotion-0"
  display="flex"
>
  Inside column
</div>
`;

exports[`test suit for design should render Container correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 20px;
  margin-bottom: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="emotion-0"
  display="flex"
>
  Contains
</div>
`;

exports[`test suit for design should render Layout correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
  display="flex"
/>
`;

exports[`test suit for design should render List correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  className="emotion-0"
  display="flex"
/>
`;

exports[`test suit for design should render Row correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  className="emotion-0"
  display="flex"
>
  Inside row
</div>
`;

exports[`test suit for design should render Sample correctly 1`] = `
.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 20px;
  margin-bottom: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-0 {
  width: 130px;
  height: 80px;
}

.emotion-1 {
  margin-top: 10px;
  font-weight: medium;
  font-family: primary;
  font-size: normal;
}

.emotion-2 {
  color: stardust;
  margin-top: 5px;
  font-size: small;
  font-family: primary;
  font-weight: normal;
}

<div
  className="emotion-3"
  display="flex"
>
  <div
    className="emotion-0"
    height={80}
    width={130}
  />
  <span
    className="emotion-1"
    fontFamily="primary"
    fontSize="normal"
    fontWeight="medium"
  >
    
  </span>
  <span
    className="emotion-2"
    color="stardust"
    fontFamily="primary"
    fontSize="small"
    fontWeight="normal"
  >
    
  </span>
</div>
`;

exports[`test suit for design should render Space correctly 1`] = `
<span
  style={
    Object {
      "display": "inline-flex",
    }
  }
>
   
</span>
`;

exports[`test suit for design should render Text correctly 1`] = `
.emotion-0 {
  font-family: primary;
  font-weight: normal;
  font-size: normal;
}

<span
  className="emotion-0"
  fontFamily="primary"
  fontSize="normal"
  fontWeight="normal"
>
  Any text
</span>
`;
